Cambios en el form

--- a/Sica/index.html
+++ b/Sica/index.html
@@ -116,13 +116,13 @@ $(document).ready(function() {
 <!-- slider -->
     <div id="exampleSlider">
         <div>
-			<h2>Whatever good things we build <span>end up building us</span></h2>
+			<h2 style="color: white">Excelencia <span>nos define</span></h2>
 			<div class="readmore-w3">
-				<a class="readmore" href="#" data-toggle="modal" data-target="#myModal1">Read More</a>
+				<a class="readmore" href="#" data-toggle="modal" data-target="#myModal1">¿Por que?</a>
 			</div>
 		</div>
         <div>
-			<h3>Architecture starts when you <span>put two bricks together</span></h3>
+			<h3>Los grandes proyectos <span>incian con una llamda</span></h3>
 			<div class="readmore-w3">
 				<a class="readmore" href="#" data-toggle="modal" data-target="#myModal1">Read More</a>
 			</div>
@@ -156,9 +156,9 @@ $(document).ready(function() {
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal">&times;</button>
-				<h4>Build Estate</h4>
+				<h4>Construye Grandes Proyectos</h4>
 				<img src="images/b.jpg" alt=" " class="img-responsive">
-				<h5>Want to be a successful landlord</h5>
+				<h5>¿Que nos diferencia con las demas empresas?</h5>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</p>
 			</div>
 		</div>
@@ -698,24 +698,24 @@ $(document).ready(function() {
 
 <!-- contact -->
 <div class="contact" id="contact">
-	<h3 class="heading"><span>Get In Touch With Us</span></h3>
+	<h3 class="heading"><span>Visitanos</span></h3>
 	<div class="col-md-3 mail">
-		<h4>Contact Us</h4>
-		<p><span class="glyphicon glyphicon-phone" aria-hidden="true"></span>+0(12) 000 123 3120</p>
-		<p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><a href="mailto:info@example.com">mail@example.com</a></p>
+		<h4>Contactanos</h4>
+		<p><span class="glyphicon glyphicon-phone" aria-hidden="true"></span>+52(33) 36 15 51 08</p>
+		<p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><a href="mailto:info@example.com">sicasadecv@prodigy.net.mx</a></p>
 	</div>
 	<div class="col-md-3 social">
 		<h4>Connect us</h4>
 		<ul>
-			<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+			<li><a href="https://www.facebook.com/sicasadecvGDL/"><i class="fa fa-facebook"></i></a></li>
 			<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 			<li><a href="#"><i class="fa fa-rss"></i></a></li>
 			<li><a href="#"><i class="fa fa-vk"></i></a></li>
 		</ul>
 	</div>
 	<div class="col-md-3 address">
-		<h4>Address</h4>
-		<p><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>1680 Richmond St, Corner in, ON N58 3d7, USA</p>
+		<h4>Direccion</h4>
+		<p><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>Calle Miguel Lerdo de Tejada #2596 int. 02, Guadalajata, Jalisco. México</p>
 	</div>
 	<div class="col-md-3 contactimg">
 		<img src="images/contact.png" alt="" />
@@ -725,19 +725,19 @@ $(document).ready(function() {
 <!-- //contact -->
 
 <!-- map -->
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387142.84038702346!2d-74.25819125880415!3d40.70583158896605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sin!4v1491973492375" style="border:0" allowfullscreen=""></iframe><!-- //map -->
-<!-- //map -->
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3732.975459283589!2d-103.38460478501264!3d20.67057738619354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428ae73372ff56f%3A0x4af8c553e6752e20!2sServicios+De+Ingenieria+Y+Control+Autom%C3%A1tico+SA+De+CV!5e0!3m2!1ses-419!2smx!4v1528940034750" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 <!-- contact form -->
 <div class="contact-form">
-	<h3 class="heading"><span>Mail Us</span></h3>
+	<h3 class="heading"><span>Contactanos</span></h3>
 	<div class="container">
 		<form action="#" method="post">
 			<input type="text" placeholder="Name" required="">
 			<input type="email" placeholder="Email" required="">
 			<input type="text" placeholder="Telephone" required="">
 			<textarea placeholder="Message" required=""></textarea>
-			<button class="btn1">Submit</button>
+			<button class="btn1">Enviar</button>
 		</form>
 	</div>
 </div>
