--- a/Sica/index.html
+++ b/Sica/index.html
@@ -683,7 +683,7 @@ $(document).ready(function() {
 								</div>
 								<div class="w3layouts_event_right_para">
 									<p>Nam tempus lobortis sem non ornare. Curabitur dignissim interdum sem, et mollis lorem. 
-										Mauris hendrerit, mi in aliquet egestas, nisi mi turpis.</p>
+										Mauris hendrrit, mi in aliquet egestas, nisi mi turpis.</p>
 								</div>
 							</div>
 							<div class="clearfix"></div>
@@ -705,7 +705,7 @@ $(document).ready(function() {
 		<p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><a href="mailto:info@example.com">sicasadecv@prodigy.net.mx</a></p>
 	</div>
 	<div class="col-md-3 social">
-		<h4>Connect us</h4>
+		<h4>Redes Sociales</h4>
 		<ul>
 			<li><a href="https://www.facebook.com/sicasadecvGDL/"><i class="fa fa-facebook"></i></a></li>
 			<li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -733,10 +733,10 @@ $(document).ready(function() {
 	<h3 class="heading"><span>Contactanos</span></h3>
 	<div class="container">
 		<form action="#" method="post">
-			<input type="text" placeholder="Name" required="">
+			<input type="text" placeholder="Nombre" required="">
 			<input type="email" placeholder="Email" required="">
-			<input type="text" placeholder="Telephone" required="">
-			<textarea placeholder="Message" required=""></textarea>
+			<input type="text" placeholder="Telefono" required="">
+			<textarea placeholder="Mensaje" required=""></textarea>
 			<button class="btn1">Enviar</button>
 		</form>
 	</div>
