Nuevo icono de empresa a pagina, titulos cambiados, nuevas imagenes agregadas

--- a/Sica/index.html
+++ b/Sica/index.html
@@ -11,6 +11,7 @@
 <title>Servicios de Ingenieria y Control Automatico Sa de Cv</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
+<link rel="icon" type="image/png" href="images/LOGO.png" />
 <meta name="keywords" content="Build Estate a Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 
@@ -97,7 +98,7 @@ $(document).ready(function() {
 						<li class="active"><a href="index.html"><span data-hover="Inicio">Inicio</span></a></li>
 						<li><a href="#about" class="scroll"><span data-hover="Nosotros">Nosotros</span></a></li>
 						<li><a href="#services" class="scroll"><span data-hover="Servicios">Servicios</span></a></li>
-						<li><a href="#team" class="scroll"><span data-hover="Vision">Vision</span></a></li>
+						<li><a href="#stats" class="scroll"><span data-hover="Vision">Vision</span></a></li>
 						<!--<li><a href="#testimonials" class="scroll"><span data-hover="Testimonials">Testimonials</span></a></li> -->
 						<li><a href="#contact" class="scroll"><span data-hover="Contactanos">Contactanos</span></a></li>
 					</ul>
@@ -169,11 +170,11 @@ $(document).ready(function() {
 
 <!-- about -->
 <div class="about" id="about">
-	<h3 class="heading"><span>Who We Are</span></h3>
+	<h3 class="heading"><span>¿Quienes somos?</span></h3>
 	<div class="container">
 		<div class="services-grids">
 			<div class="col-md-4 services-grids-info sgi">
-				<h3>Welcome to our Build Estate</h3>
+				<h3>Construye grades proyectos</h3>
 				<p>“If you can build buildings, why sit on the beach?,We always think of buildings in their settings, but so do other architects.” </p>
 				<ul>
 					<li><i class="glyphicon glyphicon-arrow-right"> </i><a href="#">International Office Buildings.</a></li>
@@ -203,7 +204,7 @@ $(document).ready(function() {
 
 <!-- services -->
 <div class="services" id="services">
-		<h3 class="heading"><span>Our Services</span></h3>
+		<h3 class="heading"><span>Nuestros Servicios</span></h3>
 	<div class="container">
 		<div class="col-md-8 servicesleft">
 			<h4>Modern Apartment for your luxuries life</h4>
@@ -263,6 +264,8 @@ $(document).ready(function() {
 <!-- //services -->
 
 <!-- team -->
+
+<!--
 	<div class="team" id="team">
 			<h3 class="heading"><span>Meet our agents</span></h3>
 		<div class="container">
@@ -369,26 +372,28 @@ $(document).ready(function() {
 			</div>
 		</div>
 </div>
+
+-->
 <!-- //team -->
 
 <!--count-->
 <div class="count-agileits" id="stats">
-	<h3 class="heading"><span>Our fun facts</span></h3>
+	<h3 class="heading"><span> Informacion</span></h3>
 		<div class="container">
 					<div class="count-grids">
 					<div class="count-bgcolor-w3ls">
 						<div class="col-md-3 count-grid">
 							<div class="count hvr-bounce-to-bottom">
-								<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='210' data-delay='.5' data-increment="1">210</div>
+								<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='150' data-delay='2' data-increment="1">15</div>
 									<span></span>
-									<h5>Professional agents</h5>
+									<h5>Trabajos Realizados</h5>
 							</div>
 						</div>
 						<div class="col-md-3 count-grid">
 							<div class="count hvr-bounce-to-bottom">
-								<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='700' data-delay='.5' data-increment="1">700</div>
+								<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='20' data-delay='5' data-increment="1">20</div>
 									<span></span>
-									<h5>Property for sale</h5>
+									<h5>Años en el mercado</h5>
 							</div>
 						</div>
 						<div class="col-md-3 count-grid">
@@ -413,7 +418,7 @@ $(document).ready(function() {
 
 <!-- property for sale -->
 <div class="special" id="offers">
-	<h3 class="heading"><span>Properties for sale</span></h3>
+	<h3 class="heading"><span>Algunos de nuestros Trabajos</span></h3>
 		<div class="container">
 			<div class="agileits-special-grids">
 				<div id="owl-demo" class="owl-carousel owl-theme">
@@ -717,10 +722,13 @@ $(document).ready(function() {
 		<h4>Direccion</h4>
 		<p><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>Calle Miguel Lerdo de Tejada #2596 int. 02, Guadalajata, Jalisco. México</p>
 	</div>
+	
 	<div class="col-md-3 contactimg">
-		<img src="images/contact.png" alt="" />
+		<img src="images/contact.jpg" alt="" height="100%" style=" display:block; margin:auto;"/> 
 	</div>
+	
 	<div class="clearfix"></div>
+	
 </div>
 <!-- //contact -->
 
